# SoftEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  build.py  note.txt
Engine/: CMakeLists.txt  ENGINE_EVENT.h  Engine.cpp  Engine.h  StartupConfig.cpp  StartupConfig.h  controlled_invalid_memory_delete_calls.txt  main.cpp
Engine/Components/: Dummy.h  SubSystemComponent.cpp  SubSystemComponent.h  SubSystemComponentId.h
Engine/Components/Physics/: Physics.h  PhysicsComponent.h
Engine/Components/Renderers/: Renderer.h
Engine/Components/Rendering/: Camera.h  Rendering.h  RenderingComponent.h
Engine/Components/Script/: Script.cpp  Script.h
Engine/Components2D/: Dummy2D.h  SubSystemComponent2D.cpp  SubSystemComponent2D.h  SubSystemComponentId2D.h
Engine/Components2D/Physics/: Body2D.h  Physics.h  Physics2D.h  RigidBody2D.h
Engine/Components2D/Rendering/: AnimatedSpritesRenderer.h  Camera2D.h  LineRenderer.h  Renderer2D.h  Rendering2D.h  Sprite.h  SpriteRenderer.h  Sprites.h  SpritesRenderer.h
Engine/Components2D/Script/: PhysicsInterface.h  PhysicsInterfaceStructs.h  Script2D.cpp  Script2D.h  Script2DMeta.h
Engine/Core/: DebugView.natvis  TypeDef.h
Engine/Core/Fiber/: Fiber.h  FiberPool.cpp  FiberPool.h
Engine/Core/Input/: Input.h  KEYBOARD.h
Engine/Core/Memory/: Context.cpp  Context.h  DeferredBuffer.cpp  DeferredBuffer.h  GC.cpp  GC.h  GCCrossBoundaryTrack.h  GCEvent.h  MARK_COLOR.h  ManagedHandle.h  ManagedHeap.cpp  ManagedHeap.h  ManagedLocalScope.cpp  ManagedLocalScope.h  ManagedObject.h  ManagedPage.h  ManagedPointers.h  ManagedPool.h  Mark.h  MarkValue.h  Memory.cpp  Memory.h  MemoryAllocator.cpp  MemoryUtils.h  NewMalloc.h  Page.h  Pool.h  SmartPointers.h  System.h  Trace.h  TypeDef.h  UnorderedDynamicArray.h
Engine/Core/Pattern/: Singleton.h
Engine/Core/Random/: ProcRandom.h  Random.h
Engine/Core/Structures/: String.h  Structures.h  TypeDef.h
Engine/Core/TemplateUtils/: TemplateUtils.h
Engine/Core/Thread/: Spinlock.h  Thread.cpp  Thread.h  ThreadID.cpp  ThreadID.h  ThreadUtils.h
Engine/Core/Time/: Clock.h
Engine/Graphics/: GraphicsCommandList.h
Engine/Graphics/API/: API.h
Engine/Math/: AABox.h  AARect.h  Box.h  Circle.h  Frustum.h  Fundamental.h  Line.inl  Line2D.h  Math.h  Plane.h  Rect.h  Sphere.h  Transform.h  Transform2D.h  Utils.h
Engine/Modules/FileSystem/: FileUtils.h  TypeDef.h
Engine/Modules/Graphics/: DebugGraphics.h  Graphics.cpp  Graphics.h
Engine/Modules/Graphics2D/: Graphics2D.cpp  Graphics2D.h
Engine/Modules/Input/: Input.h  KEYBOARD.h
Engine/Modules/Network/: TCPAcceptor.cpp  TCPAcceptor.h  TCPConnector.cpp  TCPConnector.h  TypeDef.h
Engine/Modules/Plugins/: Plugin.h  PluginLoader.cpp  PluginLoader.h
Engine/Modules/Resources/: Resource.cpp  Resource.h
Engine/Objects/: GameObject.cpp  GameObject.h  GameObjectDirectAccessor.h
Engine/Objects/Async/: AsyncTaskRunner.h
Engine/Objects/Event/: EventDispatcher.h
Engine/Objects/QueryStructures/: AABBQuerySession.h  AABBQueryStructure.h  DBVTQueryTree.cpp  DBVTQueryTree.h
Engine/Objects/Scene/: DoubleDynamicLayersScene.cpp  DoubleDynamicLayersScene.h  DynamicLayer.cpp  DynamicLayer.cpp.draft  DynamicLayer.h  DynamicLayer.h.draft  MultipleDynamicLayersScene.cpp  MultipleDynamicLayersScene.h  Scene.cpp  Scene.h  SceneQuerySession.h  TestScene.cpp  TestScene.h
Engine/Objects2D/: GameObject2D.cpp  GameObject2D.h
Engine/Objects2D/Rendering/: AnimatedSprites.h  Sprite.h
Engine/Objects2D/Scene2D/: Scene2D.cpp  Scene2D.h  UniqueGridScene2D.cpp  UniqueGridScene2D.h
Engine/Platform/: Platform.cpp  Platform.h
Engine/SubSystems/: SubSystem.cpp  SubSystem.h  SubSystemInfo.h  SubSystems.cpp  SubSystems.h
Engine/SubSystems2D/: SubSystem2D.cpp  SubSystem2D.h  SubSystemInfo2D.h
Engine/TaskSystem/: Task.h  TaskSystem.cpp  TaskSystem.h  TaskUtils.h  TaskWorker.cpp  TaskWorker.h
Runtime/: CMakeLists.txt  Config.h  DebugVar.h  RUNTIME_EVENT.h  Runtime.cpp  Runtime.h  SerializableList.h  StartupConfig.h  controlled_invalid_memory_delete_calls.txt  main.cpp
Runtime/Core/: DebugView.natvis  TypeDef.h
Runtime/MainSystem/: MainComponentDB.cpp  MainComponentDB.h  MainComponentList.h  MainSystem.h  MainSystemInfo.h  README.md
Runtime/Math/: AABox.h  AARect.h  Box.h  Capsule.h  Circle.h  Frustum.h  Fundamental.h  Line.h  Line.inl  Line2D.h  Math.h  Plane.h  Rect.h  Sphere.h  Transform.h  Transform2D.h
Runtime/Platform/: Platform.h
Runtime/Scene/: DeferredBuffer.h  GameObject.cpp  GameObject.h  GameObjectCache.h  MODIFICATION_STATE.h  Scene.cpp  Scene.h
Runtime/TaskSystem/: Task.h  TaskParamUnpack.h  TaskSystem.cpp  TaskSystem.h  TaskSystemInfo.h  TaskUtils.h  TaskWorker.cpp  TaskWorker.h
SoftEngine/: CMakeLists.txt  SoftEngine.cpp  SoftEngine.h
SoftEngine/Common/: FbxSdkCommon.h
SoftEngine/Component/: AnimObject.h  Camera.h  FPPCamera.h  Frustum.h  HeightMap.cpp  HeightMap.h  PBRMaterial.h  SkyBox.cpp  StaticObject.cpp  StaticObject.h  StaticObjectInstancing.cpp
SoftEngine/Components/: AABBRenderer.cpp  AABBRenderer.h  AnimObject.cpp  AnimObject.h  Animator.h  FPPCamera.h  Frustum.h  HeightMap.cpp  HeightMap.h  PBRMaterial.h  Quad.h  Simple.h  SkyBox.cpp  SkyBox.h  SpaceCoordinate.h  StaticObject.cpp  StaticObject.h  StaticObjectInstancing.h  Water.cpp  Water.h
SoftEngine/Core/: AnimModel3D.cpp  AnimModel3D.h  Buffer.cpp  Buffer.h  Common.h  Entity.h  File.h  ILightSystem.h  IObject.h  IRenderer.h  IResource.h  LightSystem.cpp  LightSystem.h  Logger.h  Model3D.cpp  Model3D.h  PostProcessor.cpp  PostProcessor.h  PrimitiveTopology.h  RenderPipeline.cpp  RenderPipeline.h  Renderer.cpp  Renderer.h  Resource.cpp  Resource.h  Shader.cpp  Shader.h  Window.cpp  Window.h
SoftEngine/Engine/: Engine.cpp  Engine.h  Global.h  Random.h  ResourceImp.h  WorkerConfig.h
SoftEngine/Libs/: CollectDLLs.py
SoftEngine/Math/: AABB.h  Collision.h  Math.h  Shape.h  Transform.h
Test/: CMakeLists.txt  DBVTTreeTest.cpp  DeferredBufferTest.cpp  EscTest.cpp  GTestLogger.h  ManagedPointerTest.cpp  MemoryLeakDetector.h  MemoryTest.cpp  main.cpp
(+526 files in other folders)
